See TODO, README, README.pam, and ChangeLog
wdm-1.23 -- Mar 31 2003
	- ChangeLog is now generated from repository history.
	  Old ChangeLog is saved as ChangeLog.old.
	- man page fixed. There was references to xdm everywhere. :)
	- default help message translated.
	- started process of separation wdmLogin configuration file
	  from wdm configuration file.
	- lots of internal improvements in wdmLogin.
	- german translation added
	  (by Michael Buesch <freesoftwaredeveloper@web.de>)
	- fixes for animations in wdmLogin
	  (by Michael Buesch <freesoftwaredeveloper@web.de>)
	
	There's traces of ongoing development like libwdm. It's not
	used now in any sources, but will be used in some of future
	versions.

wdm-1.22.1 -- Feb 20 2003
	There was a bug. I forgot to change pam service name
	from xdm to wdm. This release fixes it.
	
wdm-1.22 -- Feb 09 2003
	- xdm-base upgraded to xdm from XFree86-4.2.1.
	- wdmLogin translated to russian and japanese.
	Now, what will be in next releases:
	- compatibility with ancient versions of WINGs
	  will be dropped.
	- configuration files will be changed to PropList
	  format (If you want to arue, mail me or chat with me at
	  #wdm on irc.ornet.ru, or #windowmaker on irc.freenode.net)
	- wdm <-> wdmLogin protocol will be changed to implement
	  better PAM support.

wdm-1.21 -- Jan 07 2003
	- development started again. This release collects almost
	  all patches I can find on net. If you have more patches
	  please send them.
	- directories rearranged, build system rewritten (see
	  README.voins for explanations).
	- everything is ready to start migration to newer xdm base.
	
wdm-1.20 -- Feb 29 2000
	- a problem which forbid for some wdm's resources to be set
	  differently for multiple displays was corrected.
	- a problem with incorrect user permissions being set on
	  devices (e.g. mixer) was corrected by replacing some
	  xdm-3.3.2 code with xdm-3.3.6. I think all the xdm stuff
	  definitely should be updated to the latest version.